# WASM

./: .dockerignore  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  Dockerfile  build_and_run.sh  package-lock.json  readme.md
.github/workflows/: build-wasm.yml  codeql.yml  dependency-review.yml  pages.yml  release.yml
html_template/: index.html  shell_minimal.html
include/testProject/: Camera.h  Compare.h  GLWindow.h  Geometry2D.h  Geometry3D.h  camera.h  compare.h  core.h  geometry2d.h  geometry2d_types.h  geometry3D.h  matrices.h  polygon.h  polynomial.h  precision.h  render.h  vectors.h
include/testProject/Geometry2D/: bounding_volume.h  geometry2d.h  geometry2d_debug.h  geometry2d_internal.h  line2d.h  point_containment.h  rectangle2d.h  sat2d.h  shape_collision.h
include/testProject/Geometry3D/: geom3d_arrays.h  geom3d_bvh.h  geom3d_collision.h  geom3d_frustum.h  geom3d_intersect.h  geom3d_model.h  geom3d_picking.h  geom3d_primitives.h  geom3d_queries.h  geom3d_raycast.h  geom3d_sat.h  geom3d_types.h
scripts/: build_and_run.sh
src/: CMakeLists.txt  Camera.c  Camera.cpp  Geometry2D.c  Geometry2D.cpp  Geometry3D.c  Geometry3D.cpp  camera.c  core.c  main.c  matrices.c  module.c  polygon.c  polynomial.c  precision.c  render.c  render.h  render_native.c  vectors.c
src/Geometry2D/: bounding_shape.c  bounding_volume.c  geometry2d_debug.c  line2d.c  line_intersection.c  point_containment.c  rectangle2d.c  sat2d.c  shape_collision.c
src/Geometry3D/: geom3d_arrays.c  geom3d_bvh.c  geom3d_collision.c  geom3d_frustum.c  geom3d_intersect.c  geom3d_model.c  geom3d_picking.c  geom3d_primitives.c  geom3d_queries.c  geom3d_raycast.c  geom3d_sat.c
